icon covers the text fix

--- a/_includes/css/width480/service480.css
+++ b/_includes/css/width480/service480.css
@@ -12,4 +12,7 @@
         padding-left: 15px;
         margin: auto;
     }
+    .fa-stack {
+        margin-top: 20px;
+    }
 }
